Presentation view changes

--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -34,5 +34,27 @@
     <br />
 <!-- END multi_choice -->
 
+    <!-- BEGIN submission -->
+    <button type='button' class='btn btn-default'>{VALUE}</button>
+    <!-- END submission -->
+
+    <!-- BEGIN schedule -->
+    {BR}
+    <!-- END schedule -->
+
+    <!-- BEGIN status -->
+    <div class="status">{STATUS}</div>
+    <!-- END status -->
+
+    <!-- BEGIN start_time -->
+    {START_DATE}{START_DATE_VALUE}
+    <br />
+    <!-- END start_time -->
+
+    <!-- BEGIN deadline -->
+    {DEADLINE}{DEADLINE_VALUE}
+    <br />
+    <!-- END deadline -->
+
 </div>
 
