v 0.2.1 Language variables in javascript

--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -66,5 +66,10 @@
     <br/>
     <!-- END deadline -->
 
+    <!-- BEGIN textvars -->
+    <div id="text_submitted_{NAME}" style="display: none;">{TEXT_SUBMITTED}</div>
+    <div id="button_resubmit_{NAME}" style="display: none;">{BUTTON_RESUBMIT}</div>
+    <!-- END textvars -->
+
 </div>
 
