--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -49,7 +49,7 @@
     <!-- END schedule -->
 
     <!-- BEGIN status -->
-    <div id="status_{NAME}" class="status">{STATUS}</div>
+    <div id="status_{NAME}" class="status">{STATUS} {TIME}</div>
     <!-- END status -->
 
     <!-- BEGIN evaluation -->
@@ -65,11 +65,6 @@
     {DEADLINE}{DEADLINE_VALUE}
     <br/>
     <!-- END deadline -->
-
-    <!-- BEGIN textvars -->
-    <div id="text_submitted_{NAME}" style="display: none;">{TEXT_SUBMITTED}</div>
-    <div id="button_resubmit_{NAME}" style="display: none;">{BUTTON_RESUBMIT}</div>
-    <!-- END textvars -->
 
 </div>
 
