v 0.2.3 Add Mavigation model when send to exercise

--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -53,7 +53,7 @@
     <!-- END status -->
 
     <!-- BEGIN evaluation -->
-    <div id="evaluation_{NAME}" class="evaluation">{EVALUATION}</div>
+    <div id="evaluation_{NAME}" class="evaluation"><img src="{IMG_EVAL}"/>{EVALUATION}</div>
     <!-- END evaluation -->
 
     <!-- BEGIN start_time -->
@@ -65,6 +65,10 @@
     {DEADLINE}{DEADLINE_VALUE}
     <br/>
     <!-- END deadline -->
+
+    <!-- BEGIN confirmation -->
+    <div id="confirmation_{NAME}" class="confirmation">{CONFIRMATION_MODAL}</div>
+    <!-- END confirmation -->
 
 </div>
 
