support printing the content

--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -10,11 +10,19 @@
     {TXT_PROP} "{PROP_NAME}": {PROP_VAL}<br/>
     <!-- END prop -->
 
+    <!-- BEGIN loader -->
     <p class="pcinfi-loader pull-right small" style="visibility:hidden;">{TXT_SAVING} <img src="{IMG_LOADER}"/></p>
+    <!-- END loader -->
 
     <!-- BEGIN edit -->
     <p class="small text-info">{FIELD_NAME} ({FIELD_CONTEXT})</p>
     <!-- END edit -->
+
+    <!-- BEGIN printtext -->
+    <div id="{NAME}">
+        {VALUE}
+    </div>
+    <!-- END printtext -->
 
     <!-- BEGIN text -->
     <div id="{NAME}">
