--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -30,9 +30,12 @@
 
     <!-- BEGIN single_choice -->
     <div id="{NAME}">
+        <!-- END single_choice -->
+        <!-- BEGIN single_choice_options -->
         <input id="{ID}" name="{NAME}" type="radio" value="{VALUE}" {CHECKED}/> <label for="{ID}">{VALUE}</label>
+        </br>
+        <!-- END single_choice_options -->
     </div>
-    <!-- END single_choice -->
 
     <!-- BEGIN multi_choice -->
     <div id="{NAME}">
