--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -38,16 +38,19 @@
 
     <!-- BEGIN single_choice -->
     <div id="{NAME}">
-        <!-- END single_choice -->
-        <!-- BEGIN single_choice_options -->
+        <!-- BEGIN single_choice_option -->
         <input id="{ID}" name="{NAME}" type="radio" value="{VALUE}" {CHECKED}/> <label for="{ID}">{VALUE}</label>
-        </br>
-        <!-- END single_choice_options -->
+        <br />
+        <!-- END single_choice_option -->
     </div>
+    <!-- END single_choice -->
 
     <!-- BEGIN multi_choice -->
     <div id="{NAME}">
+        <!-- BEGIN multi_choice_option -->
         <input id="{ID}" name="{NAME}" type="checkbox" value="{VALUE}" {CHECKED}/> <label for="{ID}">{VALUE}</label>
+        <br />
+        <!-- END multi_choice_option -->
     </div>
     <!-- END multi_choice -->
 
